; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netipsec/extr_xform_tcp.c_tcpsignature_zeroize.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netipsec/extr_xform_tcp.c_tcpsignature_zeroize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.secasvar = type { i32*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.secasvar*)* @tcpsignature_zeroize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcpsignature_zeroize(%struct.secasvar* %0) #0 {
  %2 = alloca %struct.secasvar*, align 8
  store %struct.secasvar* %0, %struct.secasvar** %2, align 8
  %3 = load %struct.secasvar*, %struct.secasvar** %2, align 8
  %4 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.secasvar*, %struct.secasvar** %2, align 8
  %9 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.secasvar*, %struct.secasvar** %2, align 8
  %14 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = call i32 @_KEYLEN(%struct.TYPE_2__* %15)
  %17 = call i32 @bzero(i32 %12, i32 %16)
  br label %18

18:                                               ; preds = %7, %1
  %19 = load %struct.secasvar*, %struct.secasvar** %2, align 8
  %20 = getelementptr inbounds %struct.secasvar, %struct.secasvar* %19, i32 0, i32 0
  store i32* null, i32** %20, align 8
  ret i32 0
}

declare dso_local i32 @bzero(i32, i32) #1

declare dso_local i32 @_KEYLEN(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
